<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 Appliberated
     http://www.appliberated.com

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">PenaltyFlip</string>

    <!-- *********************************************** -->
    <!-- Main Activity                                   -->
    <!-- *********************************************** -->

    <!-- Action Bar items -->
    <string name="action_random_card">Random penalty card</string>
    <string name="action_max_brightness">Max card brightness</string>
    <string name="action_wikipedia_article">Learn cards on Wikipedia</string>
    <string name="action_rate_app">Rate app</string>
    <string name="action_help">Help</string>

    <!-- Penalty card list items -->
    <string name="red_card_name">Red Card</string>
    <string name="red_card_description">Ejection for a serious offence</string>
    <string name="yellow_card_name">Yellow Card</string>
    <string name="yellow_card_description">A warning or a second chance</string>
    <string name="green_card_name">Green Card</string>
    <string name="green_card_description">An official warning for a minor offence</string>
    <string name="white_card_name">White Card</string>
    <string name="white_card_description">A five-minute timed penalty</string>
    <string name="blue_card_name">Blue Card</string>
    <string name="blue_card_description">Leave the field and stay in a penalty box</string>
    <string name="black_card_name">Black Card</string>
    <string name="black_card_description">Disqualification for severe rule infractions</string>

    <!-- Penalty card list -->
    <string name="penalty_card_list_header">Select a penalty card to show</string>

    <!-- *********************************************** -->
    <!-- Penalty Card Activity                           -->
    <!-- *********************************************** -->

    <string name="penalty_card_swipe_to_close_tip">Swipe left or right to \"close\" the card</string>

    <!-- *********************************************** -->
    <!-- Preferences, urls, resources                    -->
    <!-- *********************************************** -->

    <!-- Preferences keys - should not be modified! -->
    <string name="pref_max_card_brightness" translatable="false">pref_max_card_brightness</string>

    <!-- Urls -->
    <string name="action_wikipedia_article_url">https://en.wikipedia.org/wiki/Penalty_card</string>
    <string name="action_rate_url">market://details?id=com.thehellomaker.penaltyflip</string>
    <string name="action_help_url">http://www.appliberated.com/penaltyflip/</string>
</resources>
